--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-app",
+  "name": "lawa0921_site",
   "version": "5.0.0",
-  "homepage": "https://gitname.github.io/react-gh-pages",
+  "homepage": "https://Lawa0921.github.io/react-gh-pages",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
