--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lawa0921_site",
   "version": "5.0.0",
-  "homepage": "https://lawa0921.github.io/react-gh-pages",
+  "homepage": "https://lawa0921.github.io/lawa0921-site",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
