chore(page): create basic rooms and sale_items collection logic

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,12 @@ socials:
   GitHub: https://github.com/Lawa0921
   Facebook: https://www.facebook.com/misstravel0921
 
+collections:
+  rooms:
+    output: true
+  sale_items:
+    output: true
+
 # build settings
 markdown: kramdown
 
