chore(info): create info pages basic logic

--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,8 @@ collections:
     output: true
   sale_items:
     output: true
+  infos:
+    output: true
 
 # build settings
 markdown: kramdown
