chore(saleItemPage): complete sale_items page

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@ author:
 phone: 0905108958
 role_url: "infos/2022-10-06-roles.html"
 account_url: "infos/2022-10-06-account.html"
+set_menu_url: "infos/2022-10-06-set-menu-info.html"
+menu_url: "infos/2022-10-06-menu.html"
 
 # homepage tiles
 tiles-count: 6
