chore(resource): adjust rooms image logic

--- a/_config.yml
+++ b/_config.yml
@@ -43,3 +43,173 @@ exclude:
 - LICENSE.md
 - CONTRIBUTING.md
 - README.md 
+
+images_url:
+  booking: https://drive.google.com/uc?id=1D45eCsCF07bOQHveAUCFLDVp8mSgzaoL
+  map_info: https://drive.google.com/uc?id=1k73GQTR7svYiFoSL2g1Lgf6Tn7xYEe9Z
+  booking_announcement: https://drive.google.com/uc?id=1lmie0tSblSlbv21TLqRvKcrEprnynfwK
+  campsite_1: [
+    https://drive.google.com/uc?id=1ar-Sxw-M7XYoqUOusHUcdynHXerwygQu,
+    https://drive.google.com/uc?id=1A9gRQ0ZoNbErqcr00pYDaYI720lJoGkd,
+    https://drive.google.com/uc?id=1d1jK81egbzpoy1b0pD-RsCCx1dar6wFE,
+    https://drive.google.com/uc?id=1d_YaBga3kTf1uCmoO9ooHj9Axc97Wlhe,
+    https://drive.google.com/uc?id=1-5zcQOaFCyjTXbqzNl8BdP9ASJ7Z1vrr,
+    https://drive.google.com/uc?id=1NAPapvV0vEkYR55mcEK2rCwBs_q5OitS,
+    https://drive.google.com/uc?id=1y9S-QF2nJPA674nHnNsi14f9MnqNsFwp,
+    https://drive.google.com/uc?id=1uYSQrivtcjJvyd3-Qq2jxW1VHwnJPW8-,
+    https://drive.google.com/uc?id=1bVVFagDIyPuLZh1-Le_oABklu_wF5a-V,
+    https://drive.google.com/uc?id=1USSGoEjmeOHDiLUICAhO3-eRxP1Nb0FY,
+    https://drive.google.com/uc?id=1twxz9IH8II05EJCGaHRhciJ9cRosaUAh,
+    https://drive.google.com/uc?id=1ztyj5xw3k5R420oCrfbnaa_1CxdNmrnN,
+    https://drive.google.com/uc?id=1AHA5uEbf4jMSykfYg9u9qaOMBhW9Kyy1,
+    https://drive.google.com/uc?id=1p8HWuZA8xDUVws7VmPwAvpkDknvOoepG,
+    https://drive.google.com/uc?id=15mLbB-4TiamTKnFiTCJngYhkD9sbbaA4,
+    https://drive.google.com/uc?id=1RrGbfmMigAcd58vSaQD8sjOlNMSfsBnU,
+    https://drive.google.com/uc?id=1k73GQTR7svYiFoSL2g1Lgf6Tn7xYEe9Z,
+    https://drive.google.com/uc?id=1lmie0tSblSlbv21TLqRvKcrEprnynfwK
+  ]
+  campsite_2: [
+    https://drive.google.com/uc?id=1hPLDrXgQxV-rewOt84phvTaqGNcvnaZt,
+    https://drive.google.com/uc?id=1JYDAXB7tVoQkknSl9fA0pOIkb49QpmaG,
+    https://drive.google.com/uc?id=1YNFohQwzoloUhPTNuiu9c-QLCXYafIZt,
+    https://drive.google.com/uc?id=1mNp0_4TjQBJmIBvT4mR6B8c5QYiIfaEL,
+    https://drive.google.com/uc?id=1cooaavAx0a5Xbyi0uV4jxPrsX2TfuJTK,
+    https://drive.google.com/uc?id=1LjJsG-F_ceq-klIsmqnHeP4RwESle8WE,
+    https://drive.google.com/uc?id=1CzVWKN5ccSNVVLX2aVx-ulYSJU3iBLdi,
+    https://drive.google.com/uc?id=1k73GQTR7svYiFoSL2g1Lgf6Tn7xYEe9Z,
+    https://drive.google.com/uc?id=1lmie0tSblSlbv21TLqRvKcrEprnynfwK
+  ]
+  campsite_3: [
+    https://drive.google.com/uc?id=1kmW7VPfW15Trqhs4fFcvXTjVt2VAPFVL,
+    https://drive.google.com/uc?id=1W0p2hjy_-Yeaseab3l3xgp0jexQcURbY,
+    https://drive.google.com/uc?id=1bIuVo28Pl7btLiKnoFWWaVPqWXFdey4T,
+    https://drive.google.com/uc?id=1_5BzHZtK74deUm_HxACOaqnUlaYcFFSu,
+    https://drive.google.com/uc?id=13_2uzhftuAdenKlSBQDIjrQ4mnN1f0TO,
+    https://drive.google.com/uc?id=1MsC5LDKOqmx4bG1BdEH857DggDbUk0na,
+    https://drive.google.com/uc?id=1ND1934iBBtxchsTC4Xbkay4p7fNVV7hn,
+    https://drive.google.com/uc?id=1psc056BDFbz4u24PJakeubAVLyQExrCZ,
+    https://drive.google.com/uc?id=1H35y3rxHrWEzcVshm4AVv8SpCcBfoYyo,
+    https://drive.google.com/uc?id=1k73GQTR7svYiFoSL2g1Lgf6Tn7xYEe9Z,
+    https://drive.google.com/uc?id=1lmie0tSblSlbv21TLqRvKcrEprnynfwK
+  ]
+  log_cabin_1: [
+    https://drive.google.com/uc?id=1rKBY1s5JgGImIot5mDq3n6zOY-vFNwLk,
+    https://drive.google.com/uc?id=1zXFIV6ZUeYN2hRXWkuIsYSR8OO6J-XoO,
+    https://drive.google.com/uc?id=1Y45KYP_4nb6vPrqW7ugkMBrkClQuYFf_,
+    https://drive.google.com/uc?id=103WvlZMHD4dmOrQPYDxL1K_hVbP1HPmt,
+    https://drive.google.com/uc?id=1iYyzxGBknf0UEfcdN_3AGhJTBJrwzHie,
+    https://drive.google.com/uc?id=15rzeAmBftv36rORtzZna41YcjR3Ru3UK,
+    https://drive.google.com/uc?id=1utd8wVH1JKZl42MJuyem4s0njDeuOziG,
+    https://drive.google.com/uc?id=1KwUXN0L9gvSjgO43kW9b8tR15E6ZInU5,
+    https://drive.google.com/uc?id=1BNYaGtYa2c_xHUt8O8v3jmpgjVmigF2L,
+    https://drive.google.com/uc?id=18k-aTifSidgQictfLinruiLHPY6lkjEU,
+    https://drive.google.com/uc?id=1HLM9kOjLsML86bUW7A1uQO5zFafEm874,
+    https://drive.google.com/uc?id=1FncMvKe1nbn--L7TlF8RQdxS7d-hTscf,
+    https://drive.google.com/uc?id=1k73GQTR7svYiFoSL2g1Lgf6Tn7xYEe9Z,
+    https://drive.google.com/uc?id=1lmie0tSblSlbv21TLqRvKcrEprnynfwK
+  ]
+  log_cabin_2: [
+    https://drive.google.com/uc?id=1y-1pUxq3pScIpD2x6dalA0256WFlijux,
+    https://drive.google.com/uc?id=1hedU0S7C9PEkJxK5py4srjV4PQw5EyIX,
+    https://drive.google.com/uc?id=1eTnPoP9CUJQa9hF_sIHBviwxNXjqMYFJ,
+    https://drive.google.com/uc?id=1aDfC6Sv09HkAdQFdmaGO_mVJvNLEDUpY,
+    https://drive.google.com/uc?id=1VGZtmzR2RWkrH87uLXZPSFqnX9zfiusO,
+    https://drive.google.com/uc?id=1dTjX6pD-s0kcHVcgKxfr3ReHM2iZtfLH,
+    https://drive.google.com/uc?id=1a9JXf9W0_0zSYUwaneWZJCPUWJ1JqbKV,
+    https://drive.google.com/uc?id=1HOOAfHVFSJkFXziKl9cdvvmucnWOt5zK,
+    https://drive.google.com/uc?id=1M03LHQvVyUPai7dNdBoW939fG5KGW0ZS,
+    https://drive.google.com/uc?id=1k73GQTR7svYiFoSL2g1Lgf6Tn7xYEe9Z,
+    https://drive.google.com/uc?id=1lmie0tSblSlbv21TLqRvKcrEprnynfwK
+  ]
+  log_cabin_3: [
+    https://drive.google.com/uc?id=1W57QQgL9xgtQGtOjLRbZpcCPgBv_ffPv,
+    https://drive.google.com/uc?id=1oG85dzm4RHC4LbcEe6nKcKKIDtrjwOCj,
+    https://drive.google.com/uc?id=13DkvbtOzV2fjI46ufxglc2K64L8Egzf0,
+    https://drive.google.com/uc?id=1z3cTTLpUA5zNmwSX01yiXLPTC-p-EzId,
+    https://drive.google.com/uc?id=1Nld-8oYLS0vURT6BzDrX9yi1LTQn4Dbf,
+    https://drive.google.com/uc?id=1mA5tYOjLZlZGM_bkcCfim8OPf_9lMKtc,
+    https://drive.google.com/uc?id=1xvTZQthx60Sqz__KJbi6HF5IfGpFkO9b,
+    https://drive.google.com/uc?id=194Z7T3RRbajh1cOmhfd1LL1y0lF6Rh9f,
+    https://drive.google.com/uc?id=1WV7c_q8A_GQ-YMykJjtS1oplVyWI3lST,
+    https://drive.google.com/uc?id=1WfxzXfDurxqDSUb-PPBsk0rJFit0j7S4,
+    https://drive.google.com/uc?id=1Wyid8iDLkLKjPNwHYRwPaCmeWgPqRIVd,
+    https://drive.google.com/uc?id=1bYbJLKRo5JgZdrab-54N-GFpol43WRxU,
+    https://drive.google.com/uc?id=1k73GQTR7svYiFoSL2g1Lgf6Tn7xYEe9Z,
+    https://drive.google.com/uc?id=1lmie0tSblSlbv21TLqRvKcrEprnynfwK
+  ]
+  log_cabin_4: [
+    https://drive.google.com/uc?id=1e2NFP0vn-ozraChDqeHzaQoUa0UaSuBN,
+    https://drive.google.com/uc?id=17gYnoB8596C4zS5HNd8jYiafi-zjMT91,
+    https://drive.google.com/uc?id=1JXyiyRRqX4XPoaLI8i5LxrlsaXOxdapL,
+    https://drive.google.com/uc?id=1d6w4hlACwjD4ZcdTLbtDLtUN71ikUPiW,
+    https://drive.google.com/uc?id=14RmIcHcUBTEnTPid62_mQMw9SXnqphud,
+    https://drive.google.com/uc?id=16ElhNsqvx4Pn28aEEWmwsPErst1ZkDdo,
+    https://drive.google.com/uc?id=1r5mT7RYjKI-CnDhQBaUG9H4yLvZg4Mru,
+    https://drive.google.com/uc?id=1sHL6Nb8kBIWMyI2UeiGnjtCqq0KEx-5-,
+    https://drive.google.com/uc?id=1i09oIQNsxHF5lBlple3yXdMKqF-z6PzZ,
+    https://drive.google.com/uc?id=10pnE4Q5FPKqh-2STz44fLnyhMqQ8Kf34,
+    https://drive.google.com/uc?id=1k73GQTR7svYiFoSL2g1Lgf6Tn7xYEe9Z,
+    https://drive.google.com/uc?id=1lmie0tSblSlbv21TLqRvKcrEprnynfwK
+  ]
+  suite_1: [
+    https://drive.google.com/uc?id=1DvHX_hpwtkpKZHUlnCOK7yKLzw7dhCwF,
+    https://drive.google.com/uc?id=1DF8cXkIivWGlFicomIcmX1ayZtHHFAJy,
+    https://drive.google.com/uc?id=1VeHYF11i7PZfzuxF9uDufGASJ4M1oZJV,
+    https://drive.google.com/uc?id=1UY10jH_J0GAoJxxKpf_HLDZdoHVZvfWF,
+    https://drive.google.com/uc?id=1y2cOS2hk9NooLrSaOXi_V1bZIabFFXj9,
+    https://drive.google.com/uc?id=1JG0ZCYSSIAki_JXUT0ViqlDShbdYKQfz,
+    https://drive.google.com/uc?id=1MuqvKnCx8WpujLjEnOX9rfqYNpgPj_cL,
+    https://drive.google.com/uc?id=1S_E67hAzJiZv6UI-pbUGrQQYMXcGOk66,
+    https://drive.google.com/uc?id=19bkXryk0Ie2sfLcVf5ePqBEeGdmQsOvu,
+    https://drive.google.com/uc?id=14Xa8Mm78gkEOI-71vGJ615Q-R6V-cLrm,
+    https://drive.google.com/uc?id=1VJcYHd-yiTnTT-CygM40LxepPC3BJxtL,
+    https://drive.google.com/uc?id=1lU1tewRohr5vh16wlVqJDJmthVt_NQ8E,
+    https://drive.google.com/uc?id=1amHDBDhGTLMQDnsg39NCsGbRDFg25oID,
+    https://drive.google.com/uc?id=11pC7vANkEGUViWmlfo-dfHRiOvSTC7S7,
+    https://drive.google.com/uc?id=1KDMo26L_77LdNzGFZ4Y1vSGh7cTVPC6u,
+    https://drive.google.com/uc?id=1k73GQTR7svYiFoSL2g1Lgf6Tn7xYEe9Z,
+    https://drive.google.com/uc?id=1lmie0tSblSlbv21TLqRvKcrEprnynfwK
+  ]
+  suite_2: [
+    https://drive.google.com/uc?id=1QU4mNoIXuMR_hgtiBj1f-YOUK5o1aaYc,
+    https://drive.google.com/uc?id=1jqdbEsDVm7LL6A9hOLqgBiCguBgvz0IN,
+    https://drive.google.com/uc?id=1qanBmuu-T7Xp_lB5fahP4DqbyhASv-vM,
+    https://drive.google.com/uc?id=1MQHBEtQ_b2n-Mkaf6C0t7XUIXNqibVcZ,
+    https://drive.google.com/uc?id=1Rqi6mna6XgAbHeNDICKsyVrdqpRjUZEZ,
+    https://drive.google.com/uc?id=1cKaKJqch_p12w6-JDq-KW4ZzVFJ1j_fa,
+    https://drive.google.com/uc?id=1oPaC631NBZYry1lx1n4DDhPdwA6e75wc,
+    https://drive.google.com/uc?id=1lEQ8Zhl2JFSgsQW3erD_99NHnbdtjxbK,
+    https://drive.google.com/uc?id=1ptMTyO8zobFeBjY4p_9zkah0dEipw2Ez,
+    https://drive.google.com/uc?id=1xZgFr1mZM2Sn23-QVZync0jNy0Z1rICZ,
+    https://drive.google.com/uc?id=1c5MQ0n3_7sCP1L40ijiSC3voOcXA95H8,
+    https://drive.google.com/uc?id=1DWoqugnXrmfYGHhTsGLstyHsrzUMR23q,
+    https://drive.google.com/uc?id=1bu7JqSkCIL2PmbDHDs3vfukDEP5OoP1B,
+    https://drive.google.com/uc?id=1OmKydMSHlkRfQFU2RK_d--4d5hpyESqv,
+    https://drive.google.com/uc?id=1F1-G1q2vRgJ4Na3uW22sRhedZMOmWkRL,
+    https://drive.google.com/uc?id=1Yo-rfgUydR1n3kI56lLuK4uWaxizYMXK,
+    https://drive.google.com/uc?id=1k73GQTR7svYiFoSL2g1Lgf6Tn7xYEe9Z,
+    https://drive.google.com/uc?id=1lmie0tSblSlbv21TLqRvKcrEprnynfwK
+  ]
+  suite_3: [
+    https://drive.google.com/uc?id=1tl8HC7QK6wv_9yxr2D1tAdag5pt015jx,
+    https://drive.google.com/uc?id=1A5phXRaq48Kqrfb7MYLutYjUaxVYx4dU,
+    https://drive.google.com/uc?id=1sK1OO4hekGwqCeIuqwgb6ZockHrpUCr2,
+    https://drive.google.com/uc?id=1XQCen25IQrkpWn6GLNZUHrVqOngpVi3w,
+    https://drive.google.com/uc?id=1aZltFLSDwWQ7oc-4LmHaont87BbNlY7b,
+    https://drive.google.com/uc?id=1eqK_g8LlqLE-v29t1KKuVQ-abxJNSI2y,
+    https://drive.google.com/uc?id=1lWGWkYy8Mi6X0Z2L2HZE0HQAT6wG5PDF,
+    https://drive.google.com/uc?id=1Br3LdvfFR13o_FIrDMb_x8Dt_BgK583x,
+    https://drive.google.com/uc?id=1hQ5VbOJQaE1MkmE6oIaoY6PeqZBHXKP1,
+    https://drive.google.com/uc?id=1xCpVzdO8s-t5b1aMwowucP5pxlq5HiYu,
+    https://drive.google.com/uc?id=16UkLvIa_5riWYqg460GB37_L17KY-Buh,
+    https://drive.google.com/uc?id=1aDE4A6ZmAmY_PJW3XxsJ3SKthe8_Lari,
+    https://drive.google.com/uc?id=1TttjUcwAQSD08TUSp-YZMJ60Kj77YhSu,
+    https://drive.google.com/uc?id=1HXjUy-JdBscCh1QSlag0ZHvQyIF4YiEA,
+    https://drive.google.com/uc?id=1mVQt7_vJ_zxo-yxelvQXy60ZPghUD9h8,
+    https://drive.google.com/uc?id=1AUFYcIweGJmQquMuqJnbxi-k9Ky_QM5N,
+    https://drive.google.com/uc?id=1VOX5GvOF97W_zH3tByYbn27syXoY2pRW,
+    https://drive.google.com/uc?id=1Y9Es9oPEWztn8zY7ygApaKqzF1TZltrV,
+    https://drive.google.com/uc?id=1dOwX9S7vmiGkd7So9b3MqfwmeegJGuuG,
+    https://drive.google.com/uc?id=1k73GQTR7svYiFoSL2g1Lgf6Tn7xYEe9Z,
+    https://drive.google.com/uc?id=1lmie0tSblSlbv21TLqRvKcrEprnynfwK
+  ]
