chore(galleriesPage): adjust galleries page image logic

--- a/_config.yml
+++ b/_config.yml
@@ -203,3 +203,40 @@ images_url:
     - url: https://drive.google.com/uc?id=1dOwX9S7vmiGkd7So9b3MqfwmeegJGuuG
     - url: https://drive.google.com/uc?id=1k73GQTR7svYiFoSL2g1Lgf6Tn7xYEe9Z
     - url: https://drive.google.com/uc?id=1lmie0tSblSlbv21TLqRvKcrEprnynfwK
+  galleries:
+    - url: https://drive.google.com/uc?id=1a3cNtR5XBPkUZ00EnrzjlBosbjxamP_p
+    - url: https://drive.google.com/uc?id=1fy_EyxCBUXETa-iGPei8FvIVXeveleeb
+    - url: https://drive.google.com/uc?id=1Al3ZUwr2ulrZDLbQrV6cV-uTBdts_r7l
+    - url: https://drive.google.com/uc?id=1qOdoxc9U8bH9oWJLWpbleMNN2NOcKO8C
+    - url: https://drive.google.com/uc?id=15M-bcfUys2uMKCLy9rndPTfHmllla2vB
+    - url: https://drive.google.com/uc?id=1U-CLY2xmwj6mblh6BLKrOtsx5e-y9eM5
+    - url: https://drive.google.com/uc?id=1Oei_a2w7iQk4Lwj550u7XkyzMWbxlSJg
+    - url: https://drive.google.com/uc?id=1M4-fv0GEfczc28pMjKEILLRb5QmGCTyj
+    - url: https://drive.google.com/uc?id=1suUWXsAFHtXZfVs9zVoD6FA4N7azvMce
+    - url: https://drive.google.com/uc?id=1NbrVfPtmDGsU5wCZzJI70O0GFVroRN1l
+    - url: https://drive.google.com/uc?id=1nFhY2BcJprSCQnywW-aeQSrI5k3faY0u
+    - url: https://drive.google.com/uc?id=1PEywGF3PrU5PmPYw3MgZJyp_KAdqCFIM
+    - url: https://drive.google.com/uc?id=17V-F6eJaeQxRoMzle_9Lg-Gf9Mbkqhbs
+    - url: https://drive.google.com/uc?id=1lVbTYhdg2UP8183tt20CoDvhmlw4J3u3
+    - url: https://drive.google.com/uc?id=1lqZLnGJAu2L24irEsLeMdijtG1fX0Aep
+    - url: https://drive.google.com/uc?id=1K7VPzDQyZN3KHjFpDhaJYQjF1rAmCYHB
+    - url: https://drive.google.com/uc?id=1A0JB7FwYxy_bVQkkx71oAx6kM0oqrYrr
+    - url: https://drive.google.com/uc?id=1lB_NVy3g_OedWlQvn7KT3YI9X6uGYN_I
+    - url: https://drive.google.com/uc?id=1dR6LR11zLIyBw1nAWDPcYFalDrIF4JyP
+    - url: https://drive.google.com/uc?id=17jh938yL_Y1VUTojpx63pe5LiI4zdJAC
+    - url: https://drive.google.com/uc?id=1rDto-IVtyX4GlQ3WOUk7rwQRHIS7PV-B
+    - url: https://drive.google.com/uc?id=1aKJkR5Fgn8A-qEpeoj9yx_ldv8szmG_N
+    - url: https://drive.google.com/uc?id=17yAT1sIyAlegA-YcHM9To1z7BlGvPYtz
+    - url: https://drive.google.com/uc?id=1oqfsrP1TOjCqwCvh73_l1UGjYJrxrv1O
+    - url: https://drive.google.com/uc?id=1mwAj-I4INYXbaLTczmNwHk6nwnY31x_m
+    - url: https://drive.google.com/uc?id=1GiU-PdKcDh5n-zpXlyfwYNgeplZbnj09
+    - url: https://drive.google.com/uc?id=1k5-dbUf9OTueIu3KAu6oc4M_nubFBEYz
+    - url: https://drive.google.com/uc?id=16ZYJ6g5jSTo32bstlq2W3etFJgpku844
+    - url: https://drive.google.com/uc?id=1obHK7IHtuXor-j0nmDUi3ADxIWPLBwJL
+    - url: https://drive.google.com/uc?id=1p25eFn5Jg6qohg_Px61slWbsNgmqm5m-
+    - url: https://drive.google.com/uc?id=1N81WPUnlHY4b4T1SyqWpcYq27H2lMvwZ
+    - url: https://drive.google.com/uc?id=1ylwYCr3Q9X3aJh1rMpF4VRjrwoWzqN1w
+    - url: https://drive.google.com/uc?id=1oU-dKcOAOERFoZDzD81R83CT9fhz0ol3
+    - url: https://drive.google.com/uc?id=1AhnctEhp_78eJ1CiQtksg2TZS6tD1idw
+    - url: https://drive.google.com/uc?id=14jXvZ8FNkvEvZxW_4pshFXrlywakD3L3
+    - url: https://drive.google.com/uc?id=1-e8sOVGjVqgzLGxn1S5z_JQ1KIJib-SK
