chore(page): update page info

--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ tiles-count: 6
 socials:
   Facebook: https://www.facebook.com/misstravel0921
   Instagram: https://www.instagram.com/misstravel_miaoli
+  Github: https://github.com/Lawa0921/Lawa0921.github.io
 
 collections:
   rooms:
