chore(head): add meta_description

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,8 @@ role_url: "infos/2022-10-06-roles.html"
 account_url: "infos/2022-10-06-account.html"
 set_menu_url: "infos/2022-10-06-set-menu-info.html"
 menu_url: "infos/2022-10-06-menu.html"
+meta_title: "密式旅行露營區，苗栗泰安鄉小木屋露營區"
+meta_description: "密式旅行露營區，位於苗栗泰安鄉，提供露營、小木屋、套房等多種住宿選擇，園內還提供桌遊咖啡廳、兒童遊戲室、兒童沙坑等空間，是個非常適合闔家前往的親子露營區。桌遊咖啡廳除了販售輕食、咖啡以外，也有提供免費的桌遊教學。雲海、夕陽等美景也經常造訪，竹林秘境車程十分鐘即可到達。"
 
 # homepage tiles
 tiles-count: 6
