chore(announcements): create announcements page logic

--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,8 @@ collections:
     output: true
   infos:
     output: true
+  announcements:
+    output: true
 
 # build settings
 markdown: kramdown
